# forex-api

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  constants.py  go.mod  go.sum  internal_types.py  justfile  main.go  main.py  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
database/: database.go
docs/: docs.go  embed.go  swagger.json  swagger.yaml
handlers/: named_symbols.go  named_symbols_test.go  openapi.go  openapi_test.go  rates.go  rates_test.go  routes.go  service.go  service_test.go  symbols.go  symbols_test.go
routers/: currencies.go  errors.go  middleware.go  openapi.go  rates.go  routers.go  routers_test.go
test/integration/: helpers.go  integration_test.go
utils/: environment.go  environment_test.go  errors.go  errors_test.go  strings.go  strings_test.go
